Fix new account button wrong height

--- a/frontend/src/register/register.css
+++ b/frontend/src/register/register.css
@@ -48,5 +48,5 @@ a {
 	padding:10px 35px;
 	width:120px;
 	font-size:20px;
-	min-height:0;
+	min-height:0 !important;
 }
